Fix shift-enter go-to-next-block command for the final editor block

--- a/frontend/src/styles/Editor.css
+++ b/frontend/src/styles/Editor.css
@@ -7,8 +7,7 @@
 .Editor {
     align-items: center;
     position: relative;
-    margin-top: 1%;
-    margin-bottom: 1%;
     height: 100%;
     overflow-y: scroll;
+    padding-bottom: 1%;
 }
